manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoappui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoappui
  template:
    metadata:
      labels:
        app: todoappui
    spec:
      containers:
      - name: todoappui
        image: devopsinsiders/todoapp-ui-new:v2
        ports:
        - containerPort: 80
