manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: todoapp-ui.devendra.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todoappui
            port: 
              number: 80
